--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ header {
 
 .navigation a{
     display:flex;
+    flex-direction:column;
     text-decoration: none;
     color: brown;
     font-size: 1.1em;
